--- a/examples/converters/rosbag/package.json
+++ b/examples/converters/rosbag/package.json
@@ -1,15 +1,18 @@
 {
   "name": "jskitti",
-  "version": "1.1.0",
-  "description": "Provides a minimal set of tools for working with the KITTI dataset in Javascript",
+  "version": "0.1.0",
+  "description": "Provides a starting point for converting ROSBAG data",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/convert-cli.js"
   },
   "dependencies": {
     "argparse": "^1.0.10",
     "binary-parser": "^1.3.2",
+    "bluebird": "^3.5.3",
     "dotty": "^0.1.0",
     "glob": "^7.1.2",
+    "lodash": "^4.17.11",
+    "rosbag": "^2.0.0",
     "sharp": "^0.20.7",
     "uuid": "^3.2.1",
     "xml2json": "^0.11.2"
