Add @xviz/ros support to @xviz/server
- fix an problem when sending XVIZData with an XVIZFormat.object
  down the WebsocketSink

--- a/modules/server/package.json
+++ b/modules/server/package.json
@@ -20,6 +20,9 @@
     "text-encoding": false
   },
   "dependencies": {
+    "@xviz/io": "^1.0.0-beta.1",
+    "@xviz/parser": "^1.0.0-beta.6",
+    "@xviz/ros": "^1.0.0-beta.1",
     "yargs": "^12.0.5",
     "ws": "^6.2.0",
     "text-encoding": "^0.6.4"
